# RegionalDialect

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  THIRDPARTY.md  compile_commands.json  nso.mk
.github/workflows/: pipeline.yml
include/RegionalDialect/: Config.h  Hook.h  Text.h
include/nn/nex/: socket.h
include/skyline/logger/: StdoutLogger.hpp
include/skyline/nx/sf/: cmif.h
module/: subsdk9.json.template  subsdk9.specs.template
source/: Config.cpp  Config.h  FindPattern.cpp  FindPattern.h  LanguageBarrierStructs.h  MemUtils.cpp  MemUtils.h  SigExpr.cpp  SigExpr.h  SigScan.cpp  SigScan.h  gamedef.json  main.cpp
source/RegionalDialect/: Config.cpp  Hook.cpp  System.cpp  Text.cpp  Utils.cpp  cJSON.c
source/skyline/efl/: service.cpp
source/skyline/inlinehook/: And64InlineHook.cpp
source/skyline/logger/: StdoutLogger.cpp
source/skyline/plugin/: PluginManager.cpp
src/: englishTipsBranchFix.s  gamedef.json
src/RegionalDialect/: Config.cpp  Config.h  Hook.cpp  Hook.h  Mem.cpp  Mem.h  System.cpp  System.h  Text.cpp  Text.h  Utils.cpp  Utils.h  Vm.cpp  Vm.h
src/program/: main.cpp  setting.hpp
